<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_sort_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_name"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_sort_by_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_by_type"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_add_machine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_machine_data"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    </ListView>

</LinearLayout>