<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MachineDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/machine_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    />

                <TextView
                    android:id="@+id/id_dynamic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="123" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/machine_name_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_name"/>

                <TextView
                    android:id="@+id/machine_name_dynamic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="machine name"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/machine_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/machine_type"/>

                <TextView
                    android:id="@+id/machine_type_dynamic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="machine type"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/machine_qr_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qr_code"/>

                <TextView
                    android:id="@+id/machine_qr_dynamic_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="QR Code"/>

            </LinearLayout>

            <DatePicker
                android:id="@+id/last_mt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn_machine_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/machine_image"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>